src/objects/Claim_Impact_Report_Form__c.object
<CustomObject>
    <description>Claim Impact Report object is used by CPM users, it will be capture the Report Information.</description>
    <fields>
        <fullName>AMA_Place_of_Service__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter an AMA Place of Service code or list of AMA Place of Service codes separated by commas (i.e. 02,11,21) Include leading zeros.</inlineHelpText>
        <label>AMA Place of Service</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Denial_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the appropriate Adjustment/Denial/T-Codes for the project.</inlineHelpText>
        <label>Adjustment/Denial Codes</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Maximum Limit of 300 IDs. Multiple IDs must be separated b a comma with no space after the comma.</inlineHelpText>
        <label>Agreement ID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beginning_DRG_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to select a System DRG range - enter a 5 character DRG code for the start of the range. If one code only, list in beginning field. If multiple codes that are NOT in a range, leave both fields blank and add codes to attachment.</inlineHelpText>
        <label>Beginning DRG Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beginning_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Beginning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Beginning_Diagnosis_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to select a diagnosis code range - enter upto a 5 character diagnosis code for the START of the range. Do not include the period. If one code only, list in Beginning field. Else codes that are NOT in a range, keep fields blank and add in attachment.</inlineHelpText>
        <label>Beginning Diagnosis Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beginning_Procedure_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter a 5 character BEGINNING CPT4 or HCPCS procedure code when selecting a procedure code range. Include leading zeros, no spaces. If one code only, list in Beginning field, else codes that are NOT in range, leave both fields blank and attach them</inlineHelpText>
        <label>Beginning Procedure Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beginning_Process_Paid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you enter a Beginning Claim Paid Date, you must enter an Ending Claim Paid Date</inlineHelpText>
        <label>Beginning Process/Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Beginning_Revenue_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to select a revenue code range - enter a revenue code for the start of the range. If one code only, list in Beginning field. If multiple codes that are NOT in a range, leave both fields blank and add codes to attachment.</inlineHelpText>
        <label>Beginning Revenue Code</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bill Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPM_Name__c</fullName>
        <formula>Project_Details__r.CPM_Name__r.FirstName + &apos; &apos; + Project_Details__r.CPM_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPM_Owner_s_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CPM Owner&apos;s Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPT_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CPT Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Status_Code__c</fullName>
        <inlineHelpText>Please select PAID, DENIED, or ALL from the drop down box.(PAID = Processed;DENIED = Denied OR Processed with Net Paid = 0)</inlineHelpText>
        <label>Charge Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Examples__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For example: EE ID, ICN or Control Lines, etc.</inlineHelpText>
        <label>Claim Examples</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>(multiple numbers must  be separated by a comma with no space after the comma) Max Limit - 300 Claims (CSP) &amp; 350 claims (Cosmos)</inlineHelpText>
        <label>Claim Number</label>
        <length>32500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Claim_Type__c</fullName>
        <label>Claim Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>ER Only</fullName>
                </value>
                <value>
                    <fullName>Inpatient</fullName>
                </value>
                <value>
                    <fullName>Institutional</fullName>
                </value>
                <value>
                    <fullName>Outpatient</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>AA-Hospital Services</fullName>
                </value>
                <value>
                    <fullName>AL-Air Transport</fullName>
                </value>
                <value>
                    <fullName>TL-Air Transport</fullName>
                </value>
                <value>
                    <fullName>AK-Ambulance</fullName>
                </value>
                <value>
                    <fullName>TK-Ambulance</fullName>
                </value>
                <value>
                    <fullName>AT-Attending Phys</fullName>
                </value>
                <value>
                    <fullName>IV-Blood Service</fullName>
                </value>
                <value>
                    <fullName>OV-Blood Service</fullName>
                </value>
                <value>
                    <fullName>AU-Cardiology Pro. Fees</fullName>
                </value>
                <value>
                    <fullName>IU-Cardiology Pro. Fees</fullName>
                </value>
                <value>
                    <fullName>OA-Cardiology Prof. Fees</fullName>
                </value>
                <value>
                    <fullName>TY-Chemotherapy</fullName>
                </value>
                <value>
                    <fullName>ME-Chiropractic</fullName>
                </value>
                <value>
                    <fullName>MT-Chiropractic-Non-Standard</fullName>
                </value>
                <value>
                    <fullName>II-Convalescent</fullName>
                </value>
                <value>
                    <fullName>MP-Dental</fullName>
                </value>
                <value>
                    <fullName>IF-Detoxification</fullName>
                </value>
                <value>
                    <fullName>AS-Dialysis</fullName>
                </value>
                <value>
                    <fullName>OS-Dialysis</fullName>
                </value>
                <value>
                    <fullName>MS-DME - Non-Standard</fullName>
                </value>
                <value>
                    <fullName>MR-Durable Med Equip.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Segment_Number_Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Segment Number - Group Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOS_Beginning_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Beginning DOS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOS_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ending DOS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRG_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Multiple numbers must be separated with a comma with no spaces after the comma.</inlineHelpText>
        <label>DRG Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Assigned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Range_Type__c</fullName>
        <label>Date Range Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processed Date</fullName>
                </value>
                <value>
                    <fullName>Received Date</fullName>
                </value>
                <value>
                    <fullName>CSP Input Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To be used for reports not pulled internally.</inlineHelpText>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Returned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date Returned is the date the report is returned to the Report Analyst from the Reporting Platform</inlineHelpText>
        <label>Date Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Code_Position__c</fullName>
        <label>Diagnosis Code Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diagnosis_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Multiple numbers must be separated with a comma with no spaces after the comma.</inlineHelpText>
        <label>Diagnosis Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Cosmos_Only__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter all or list the divisions.</inlineHelpText>
        <label>Division</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ending_DRG_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to select a System DRG range - enter a 5 character DRG code for the end of the range</inlineHelpText>
        <label>Ending DRG Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ending_Diagnosis_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to select a diagnosis code range - enter up to a 5 character diagnosis code for the END of the range. Do not include the period.</inlineHelpText>
        <label>Ending Diagnosis Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ending_Procedure_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter a 5 character ENDING CPT4 or HCPCS procedure code when selecting a procedure code range. Include leading zeros, no spaces</inlineHelpText>
        <label>Ending Procedure Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ending_Process_Paid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ending Process/Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ending_Revenue_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ending Revenue Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTIN_Tax_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FTIN (Tax ID)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Schedule_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Maximum Limit of 350 IDs. Multiple IDs must be separated b a comma with no space after the comma.</inlineHelpText>
        <label>Fee Schedule ID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_From_Project_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Feed From Project Details</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Funding_Arrangement__c</fullName>
        <label>Funding Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Self Funded</fullName>
                </value>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                    <isActive>false</isActive>
                    <label>ASO</label>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                    <isActive>false</isActive>
                    <label>BOTH</label>
                </value>
                <value>
                    <fullName>FULL</fullName>
                    <isActive>false</isActive>
                    <label>FULL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_Exclude_Capitation__c</fullName>
        <inlineHelpText>Select to include or exclude capitation claims</inlineHelpText>
        <label>Include/Exclude Capitation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Include</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_Exclude_Denial_Reasons__c</fullName>
        <label>Include/Exclude Denial Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Include</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Product_Code__c</fullName>
        <label>Industry Product Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Charter [69]</fullName>
                </value>
                <value>
                    <fullName>Choice/Choice Plus [50]</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Compass [37]</fullName>
                </value>
                <value>
                    <fullName>Core [63]</fullName>
                </value>
                <value>
                    <fullName>Harvard Pilgrim [57,58,61]</fullName>
                </value>
                <value>
                    <fullName>Heritage [42,77,78,79]</fullName>
                </value>
                <value>
                    <fullName>Indemnity/Managed Indemnity [00]</fullName>
                </value>
                <value>
                    <fullName>MAHP Gated HMO [23]</fullName>
                </value>
                <value>
                    <fullName>Medica Choice/Choice + HMO  [70-H]</fullName>
                </value>
                <value>
                    <fullName>Medicaid (MCD)</fullName>
                </value>
                <value>
                    <fullName>Medicare (MCR)</fullName>
                </value>
                <value>
                    <fullName>Navigate [15]</fullName>
                </value>
                <value>
                    <fullName>Nexus ACO [74,75,76]</fullName>
                </value>
                <value>
                    <fullName>NHP [41,90]</fullName>
                </value>
                <value>
                    <fullName>Options (PPO)/Non-Differential (PP1) [00]</fullName>
                </value>
                <value>
                    <fullName>Passport Choice EPO [70-E]</fullName>
                </value>
                <value>
                    <fullName>Passport Choice Plus POS [70-P]</fullName>
                </value>
                <value>
                    <fullName>Passport PPO [70-O]</fullName>
                </value>
                <value>
                    <fullName>Secure Horizons</fullName>
                </value>
                <value>
                    <fullName>Select/Select Plus [00]</fullName>
                </value>
                <value>
                    <fullName>UHC Doctors Plan/Plus HMO/Plus POS/EPO [95]</fullName>
                </value>
                <value>
                    <fullName>All Products</fullName>
                    <isActive>false</isActive>
                    <label>All Products</label>
                </value>
                <value>
                    <fullName>Choice / Choice Plus [50]</fullName>
                    <isActive>false</isActive>
                    <label>Choice / Choice Plus [50]</label>
                </value>
                <value>
                    <fullName>Indemnity (IND) / Managed Indemnity (MIN) [00]</fullName>
                    <isActive>false</isActive>
                    <label>Indemnity (IND) / Managed Indemnity (MIN) [00]</label>
                </value>
                <value>
                    <fullName>NHP [41, 90]</fullName>
                    <isActive>false</isActive>
                    <label>NHP [41, 90]</label>
                </value>
                <value>
                    <fullName>Options(PPO)/Non-Differential (PP1) [00]</fullName>
                    <isActive>false</isActive>
                    <label>Options(PPO)/Non-Differential (PP1) [00]</label>
                </value>
                <value>
                    <fullName>Select / Select Plus [00]</fullName>
                    <isActive>false</isActive>
                    <label>Select / Select Plus [00]</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <inlineHelpText>Enter any combination of the following: CO (Commercial), LB (Liberty) or SF (Self-Funded) separated by commas.  Leave blank to indicate all Lines of Business</inlineHelpText>
        <label>LOB</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CO (Commercial)</fullName>
                </value>
                <value>
                    <fullName>LB (Liberty)</fullName>
                </value>
                <value>
                    <fullName>SF (Self Funded)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a 5 digit (including leading zeros) or list of 5 digit COSMOS legal entity numbers.</inlineHelpText>
        <label>Legal Entity</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter the 2 digit numeric Market Type if scrub is needed to a specific market type(s) only</inlineHelpText>
        <label>Market Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Attending__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NPI - Attending</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Billing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NPI - Billing</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_If_Available__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>(multiple numbers must  be separated by a comma with no space after the comma) Max Limit 350</inlineHelpText>
        <label>NPI (If Available)</label>
        <length>32500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NPI_Servicing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NPI - Servicing</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Logged_Claims__c</fullName>
        <label># of Logged Claims</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PID_If_Available__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>multiple numbers must  be separated by a comma with no space after the comma) Max Limit - 300 ids</inlineHelpText>
        <label>PID (If Available)</label>
        <length>32500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMG_Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PMG Group Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Cosmos_Only__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter all or list the panels.</inlineHelpText>
        <label>Panel</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participating_Provider_Status__c</fullName>
        <label>Participating Provider Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>INN</fullName>
                </value>
                <value>
                    <fullName>OON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Place_of_Service_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Multiple numbers must be separated with a comma with no spaces after the comma.</inlineHelpText>
        <label>Place of Service Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSP Facets</fullName>
                </value>
                <value>
                    <fullName>Cosmos</fullName>
                </value>
                <value>
                    <fullName>Cirrus</fullName>
                </value>
                <value>
                    <fullName>Pulse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procedure_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Maximum limit of codes is 650. Multiple codes must be separated with a comma with no spaces after the comma.</inlineHelpText>
        <label>Procedure Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Modifier_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter a 2 character procedure modifier or list of procedure modifiers separated by commas, no spaces (i.e. 26,50,51).</inlineHelpText>
        <label>Procedure Modifier Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Details__c</fullName>
        <label>Project Details</label>
        <referenceTo>Project_Details__c</referenceTo>
        <relationshipLabel>Claim Impact Report Forms</relationshipLabel>
        <relationshipName>Claim_Impact_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Escalated__c</fullName>
        <formula>TEXT(Project_Details__r.Escalation_Approved__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalation Approved</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name_Provider_Facility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Name (Provider/Facility)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Accreditation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the type of accreditation that was updated. AIUM, ACR, ACR-OB. ICAVL, ABR, etc.</inlineHelpText>
        <label>Provider Accreditation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Contract_COSMOS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Contract</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Contract_Payment_Type__c</fullName>
        <label>Provider Contract Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capitated</fullName>
                </value>
                <value>
                    <fullName>Fee For Service</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Fee_Schedule__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Fee Schedule</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_ID_Cosmos_only__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider ID - Cosmos only</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Participation_Status__c</fullName>
        <label>Provider Participation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>INN</fullName>
                </value>
                <value>
                    <fullName>OON</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                    <isActive>false</isActive>
                    <label>BOTH</label>
                </value>
                <value>
                    <fullName>NON-PAR</fullName>
                    <isActive>false</isActive>
                    <label>NON-PAR</label>
                </value>
                <value>
                    <fullName>PAR</fullName>
                    <isActive>false</isActive>
                    <label>PAR</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Specialty_Code_COSMOS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Multiple types must be separated by a comma with no spaces after the comma.</inlineHelpText>
        <label>Provider Specialty Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Specialty_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>(multiple types must  be separated by a comma with no space after the comma)</inlineHelpText>
        <label>Provider Specialty Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RA_Supervisor__c</fullName>
        <label>Supervisor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Irene Reader</fullName>
                </value>
                <value>
                    <fullName>Joelle Campbell</fullName>
                </value>
                <value>
                    <fullName>Reshaud Smith</fullName>
                    <isActive>false</isActive>
                    <label>Reshaud Smith</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>(multiple codes must  be separated by a comma with no space after the comma)</inlineHelpText>
        <label>Reason Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reference #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>